--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ main{
     position: relative;
     background-color: #e6e6e6;
     min-height: 500px;
+    padding-bottom: 10px;
 }
 
 header{
@@ -103,7 +104,53 @@ header h1, .text-head{
     color: #5c4a4a
 }
 
+.project-table{
+    margin-top: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.card{
+    position: relative;
+}
+
+.card-text{
+    width: 336px;
+    height: 150px;
+}
+
 .card img{ 
-    width: 300px;
-    height: 300px;
+    width: 336px;
+    height: 150px;
+}
+
+
+.img-card{
+    object-fit: contain;
+}
+
+.feedback-btn{
+    display: block;
+    width: 180px;
+    height: 25px;
+    margin: 0 auto;
+    margin-top: 30px;
+    background-color:#2d2d2d;
+    padding: 0;
+    border: none;
+}
+
+.feedback-btn a{
+    font-family: 'Russo One', sans-serif;
+    text-decoration: none; 
+    color:#fff;
+}
+
+footer{
+    margin-top: 30px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    font-size: 14px
 }
